--- a/stylecss/styles.css
+++ b/stylecss/styles.css
@@ -101,27 +101,55 @@ footer {
   text-align: center;
 }
 .card {
-  margin: 1rem;
-  padding: 2rem;
-  box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.45);
-  background: whitesmoke;
-  display: flex;
-  flex-direction: row;
+  height: 250px;
+  width: 250px;
+  margin: 50px;
+  box-shadow: 5px 5px 20px black;
   overflow: hidden;
-  transition: transform 500ms ease;
 }
-/*.intro {
-   box-sizing: border-box;
+.intro {
+  height: 70px;
+  width: 300px;
+  padding: 5px;
+  box-sizing: border-box;
   position: absolute;
+  bottom: 0px;
   background: rgb(27, 27, 27, 0.5);
   color: white;
-  bottom: 240px;
-}*/
-.card.img {
-  max-width: 100%;
-  align-self: center;
+  transition: 0.8s;
 }
-.card.content {
+.card.title {
+  margin: 10px;
+  font-size: 40px;
+}
+.card p {
+  font-size: 20px;
+  margin: 10px;
+  visibility: hidden;
+  opacity: 0;
+}
+.card:hover {
+  cursor: pointer;
+}
+.card:hover .intro {
+  height: 0;
+  bottom: 200px;
+  background: black;
+}
+.card:hover p {
+  opacity: 1;
+  visibility: visible;
+  background: rgb(27, 27, 27, 0.5);
+}
+.card:hover img {
+  transform: scale(1.1) rotate(-3deg);
+}
+.card.img {
+  height: 250px;
+  width: 300px;
+  border-radius: 3px;
+}
+/*.card.content {
   background: linear-gradient(black, rgba(0, 0, 0, 0.5));
   transform: translateY(65%);
   transition: transform 500ms ease;
@@ -129,7 +157,7 @@ footer {
 .card:hover .card.content {
   transform: translateY(0);
   transition-delay: 500ms;
-}
+}*/
 /* contactenos*/
 .form {
   max-width: 50%;
